Fixed the folder/file bug in readLGF. Added an option to the Chromosome image method to "showBandNames".
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/thresher@247 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/RCytoGPS/NEWS
+++ b/pkg/RCytoGPS/NEWS
@@ -1,18 +1,13 @@
 			Dear Emacs, please make this -*-Text-*- mode!
 	**************************************************
 	*						 *
-	*	       0.0 SERIES NEWS			 *
+	*	       1.0 SERIES NEWS			 *
 	*						 *
 	**************************************************
 
 
-		CHANGES IN R VERSION 0.0.1
+		CHANGES IN R VERSION 1.0.0
 
 NEW FEATURES
 
-    o	Initial version of the pacakge.
-
-BUG FIXES
-
-    o	
-
+    o	Initial release of the package.
