--- a/pkg/Mercator/NEWS
+++ b/pkg/Mercator/NEWS
@@ -9,6 +9,12 @@
 
 NEW FEATURES
 
+    o	Added 'print' and 'show' methods to the BinaryMatrix class. .
+
+		CHANGES IN R VERSION 0.11.2
+
+NEW FEATURES
+
     o	Modified the Mercator constructor to accept an arbnitrary
         distance matrix and not just a BinaryMatrix. Also included a
         second vignette focusing on continuous data, with an extra
