Added new "preclean" function
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/thresher@251 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/RCytoGPS/NEWS
+++ b/pkg/RCytoGPS/NEWS
@@ -1,9 +1,17 @@
 			Dear Emacs, please make this -*-Text-*- mode!
 	**************************************************
 	*						 *
-	*	       1.0 SERIES NEWS			 *
+	*	       1.1 SERIES NEWS			 *
 	*						 *
 	**************************************************
+
+
+		CHANGES IN R VERSION 1.1.0
+
+NEW FEATURES
+
+    o	Added a "preclean" function to delete recurrent non-standard
+        phrases from input karyotypes.
 
 
 		CHANGES IN R VERSION 1.0.0
